--- a/arrival.html
+++ b/arrival.html
@@ -369,8 +369,8 @@
                 </div>
             </div>
         </div>
-        <div class="custom-btns-prev-slider sliderLRArr"><img src="img/left-arrow.png" alt=""></div>
-        <div class="custom-btns-next-slider sliderLRArr"><img src="img/right-arrow.png" alt=""></div>
+        <div class="custom-btns-prev-slider sliderLRArr sliderNotHome"><img src="img/left-arrow.png" alt=""></div>
+        <div class="custom-btns-next-slider sliderLRArr sliderNotHome"><img src="img/right-arrow.png" alt=""></div>
     </section>
 
     <div class="footer">
@@ -430,7 +430,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
@@ -497,7 +497,7 @@
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: true,
-            margin: 10,
+            margin: 17,
             nav: false,
             dots: false,
             autoplay: true,
