--- a/cart.html
+++ b/cart.html
@@ -139,23 +139,30 @@
         </div>
     </div>
 
-    <div class="container mt-4 mb-4">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Cart</p>
+    <div class="container mt-5 mb-5">
+        <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
+            <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="allimgBtnbox">
+                        <p class="wishlistHead">Cart</p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
         </div>
     </div>
 
-    <div class="container cartWishEmpty text-center mb-5">
+    <!-- backend part -->
+    <!-- <div class="container cartWishEmpty text-center mb-5">
         <div class="mb-4">
             <p class="m-0 txtFadedAll">Your cart feels lonely.</p>
             <p class="m-0 txtFadedAll">Fill it up with your choice of brilliance</p>
         </div>
         <button class="btns">Discover now</button>
-    </div>
+    </div> -->
 
     <section class="container mb-5">
         <div class="tableBoxCart">
@@ -268,7 +275,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
