--- a/checkout.html
+++ b/checkout.html
@@ -139,13 +139,19 @@
         </div>
     </div>
 
-    <div class="container mt-4 mb-3">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Checkout</p>
+    <div class="container mt-4 pt-5 mb-3">
+        <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
+            <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="allimgBtnbox">
+                        <p class="wishlistHead">Checkout</p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
         </div>
     </div>
 
@@ -195,7 +201,7 @@
                                     <option value="India" selected>India</option>
                                     <option value="OtherCountry">Other Country</option>
                                 </select>
-                                <span class="slectCheckoutIcon"><i class="fas fa-sort-down"></i></span>
+                                <span class="slectCheckoutIcon slectCheckCountry"><i class="fas fa-sort-down"></i></span>
                             </div>
                         </div>
                     </div>
@@ -219,7 +225,7 @@
                                     <option value="Westbengal" selected>West Bengal</option>
                                     <option value="OtherState">Other State</option>
                                 </select>
-                                <span class="slectCheckoutIcon"><i class="fas fa-sort-down"></i></span>
+                                <span class="slectCheckoutIcon selctCheckState"><i class="fas fa-sort-down"></i></span>
                             </div>
                         </div>
                     </div>
@@ -277,7 +283,7 @@
                                     <option value="India" selected>India</option>
                                     <option value="OtherCountry">Other Country</option>
                                 </select>
-                                <span class="slectCheckoutIcon"><i class="fas fa-sort-down"></i></span>
+                                <span class="slectCheckoutIcon slectCheckCountry"><i class="fas fa-sort-down"></i></span>
                             </div>
                         </div>
                     </div>
@@ -301,7 +307,7 @@
                                     <option value="Westbengal" selected>West Bengal</option>
                                     <option value="OtherState">Other State</option>
                                 </select>
-                                <span class="slectCheckoutIcon"><i class="fas fa-sort-down"></i></span>
+                                <span class="slectCheckoutIcon selctCheckState"><i class="fas fa-sort-down"></i></span>
                             </div>
                         </div>
                     </div>
@@ -400,7 +406,7 @@
         </div>
     </section>
 
-    <section class="wholeCheckOut2 mb-5">
+    <section class="wholeCheckOut2 mb-5 pb-5">
         <div class="container">
             <div class="downCheckout row">
                 <div class="checkoutPaymentMsg col-lg-6 col-md-7 col-sm-12 txtFadedAll text-start">Your personal data will be used to process your order, support your
@@ -476,7 +482,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
