--- a/diamondjourney.html
+++ b/diamondjourney.html
@@ -139,7 +139,7 @@
         </div>
     </div>
 
-    <div class="container diamondUpper">
+    <div class="container diamondUpper pt-4">
         <div class="diamondLogo text-center mt-5 mb-4">
             <img src="img/other/heading.png" class="img-fluid">
         </div>
@@ -313,7 +313,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
