--- a/gift.html
+++ b/gift.html
@@ -169,7 +169,7 @@
     </div>
 
 
-    <div class="container text-center mt-5 mb-5">
+    <div class="container text-center mt-5 mb-5 pt-5 pb-3">
         <h2 class="allHeading txtFadedAll">
             <span class="sliderAlFnt">Customise </span>
             your cart
@@ -186,7 +186,7 @@
                     <div class="gift_cut_content">
                         <div class="gift_cut_upprt">
                             <div class="d-flex cut_images">
-                                <div class="per_cut_img active">
+                                <div class="per_cut_img">
                                     <img src="img/other/a1.png">
                                 </div>
                                 <div class="per_cut_img">
@@ -227,7 +227,7 @@
                                 <div class="perGift_item gift_color_item">
                                     <p class="m-0 text-center">F</p>
                                 </div>
-                                <div class="perGift_item gift_color_item active">
+                                <div class="perGift_item gift_color_item">
                                     <p class="m-0 text-center">G</p>
                                 </div>
                             </div>
@@ -280,7 +280,7 @@
                                 <div class="perGift_item gift_clarity_item">
                                     <p class="m-0 text-center">VVS1</p>
                                 </div>
-                                <div class="perGift_item gift_clarity_item active">
+                                <div class="perGift_item gift_clarity_item">
                                     <p class="m-0 text-center">VVS2</p>
                                 </div>
                                 <div class="perGift_item gift_clarity_item">
@@ -311,7 +311,7 @@
                                 <div class="perGift_item gift_plish_item">
                                     <p class="m-0 text-center">Excellent</p>
                                 </div>
-                                <div class="perGift_item gift_plish_item active">
+                                <div class="perGift_item gift_plish_item">
                                     <p class="m-0 text-center">V.Good</p>
                                 </div>
                             </div>
@@ -333,7 +333,7 @@
                     <div class="giftDownContent">
                         <div class="giftDownBox">
                             <div class="gift_down_box_upper d-flex">
-                                <div class="perGift_item gift_certifict_item active">
+                                <div class="perGift_item gift_certifict_item">
                                     <p class="m-0 text-center">GIA</p>
                                 </div>
                                 <div class="perGift_item gift_certifict_item">
@@ -359,7 +359,7 @@
                                 <div class="perGift_item gift_symentry_item">
                                     <p class="m-0 text-center">V.Good</p>
                                 </div>
-                                <div class="perGift_item gift_symentry_item active">
+                                <div class="perGift_item gift_symentry_item">
                                     <p class="m-0 text-center">Good</p>
                                 </div>
                             </div>
@@ -376,7 +376,7 @@
                                 <div class="perGift_item gift_cut2_item">
                                     <p class="m-0 text-center">H&A</p>
                                 </div>
-                                <div class="perGift_item gift_cut2_item active">
+                                <div class="perGift_item gift_cut2_item">
                                     <p class="m-0 text-center">Excellent</p>
                                 </div>
                                 <div class="perGift_item gift_cut2_item">
@@ -398,7 +398,7 @@
                                 <div class="perGift_item gift_flurence_item">
                                     <p class="m-0 text-center">None</p>
                                 </div>
-                                <div class="perGift_item gift_flurence_item active">
+                                <div class="perGift_item gift_flurence_item">
                                     <p class="m-0 text-center">Faint</p>
                                 </div>
                                 <div class="perGift_item gift_flurence_item">
@@ -468,7 +468,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr lightColrTableGift">
@@ -485,7 +489,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr">
@@ -502,7 +510,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr lightColrTableGift">
@@ -519,7 +531,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr">
@@ -536,7 +552,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr lightColrTableGift">
@@ -553,7 +573,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr">
@@ -570,7 +594,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr lightColrTableGift">
@@ -587,7 +615,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr">
@@ -604,7 +636,11 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
                 <tr class="giftLower_tr lightColrTableGift">
@@ -621,16 +657,18 @@
                     <td class="text-center gift_lower_td txtFadedAll">IGI</td>
                     <td class="text-center gift_lower_td txtFadedAll">Faint</td>
                     <td class="text-center gift_lower_td txtFadedAll">211056M</td>
-                    <td class="text-center gift_lower_td txtFadedAll">View</td>
+                    <td class="text-center gift_lower_td txtFadedAll">
+                        <a href="./compare.html">
+                            View
+                        </a>
+                    </td>
                     <td class="text-center gift_lower_td txtFadedAll">Rs. 150,000/-</td>
                 </tr>
             </table>
         </div>
         <div class="giftBtns mt-3 text-end">
             <button class="btns">
-                <a href="./compare.html">
                     Compare
-                </a>
             </button>
             <button class="btns">
                 <a href="./cart.html">
@@ -697,7 +735,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
