--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
 
 
-    <div class="container categoriesBox mt-5">
+    <div class="container categoriesBox pb-5">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
                 <div class="perBoxCatg perbox1">
@@ -185,7 +185,7 @@
                         <img src="img/earrings.png" class="img-fluid">
                         <p class="discoverBtn">
                             <a href="#">
-                                DISCOVER
+                                Discover
                             </a>
                         </p>
                     </div>
@@ -195,7 +195,7 @@
                         <img src="img/ring.png" class="img-fluid">
                         <p class="discoverBtn">
                             <a href="#">
-                                DISCOVER
+                                Discover
                             </a>
                         </p>
                     </div>
@@ -220,7 +220,7 @@
                         <img src="img/Bracelet.png" class="img-fluid">
                         <p class="discoverBtn">
                             <a href="#">
-                                DISCOVER
+                                Discover
                             </a>
                         </p>
                     </div>
@@ -230,7 +230,7 @@
                         <img src="img/nacklace.png" class="img-fluid">
                         <p class="discoverBtn">
                             <a href="#">
-                                DISCOVER
+                                Discover
                             </a>
                         </p>
                     </div>
@@ -239,7 +239,7 @@
         </div>
     </div>
 
-    <div class="iframeCont">
+    <div class="iframeCont pb-4">
         <iframe
             src="https://www.youtube.com/embed/ENQmpVZswys?autoplay=0&controls=0&disablekb=1&playsinline=1&cc_load_policy=0&widget_referrer=https%3A%2F%2Fwww.chiragjewellers.com%2Fonlinestore%2F&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fwww.chiragjewellers.com&widgetid=1"
             frameborder="0" width="100%" height="580" autoplay></iframe>
@@ -248,7 +248,7 @@
 
     <!-- productSlider -->
     <section class="producySlider mt-5 mb-5">
-        <div class="sliderHead text-center mb-5 mt-5">
+        <div class="sliderHead text-center py-4 mb-5">
             <h2 class="allHeading">
                 <span class="sliderAlFnt">Trending</span>
                 Collection
@@ -353,7 +353,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
@@ -405,7 +405,7 @@
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: true,
-            margin: 20,
+            margin: 18,
             nav: false,
             dots: false,
             autoplay: true,
