--- a/ourstory.html
+++ b/ourstory.html
@@ -139,7 +139,7 @@
     </div>
 
     <!-- story  -->
-    <div class="container text-center mt-5 txtFadedAll">
+    <div class="container text-center mt-5 pt-4 txtFadedAll">
         <h2 class="allHeading mb-5">
             Unearthing the story of a
             <span class="sliderAlFnt">billion year old</span>
@@ -167,24 +167,25 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container pb-5">
         <div class="row">
-            <div class="col-lg-1 col-md-12 col-sm-12"></div>
-            <div class="col-lg-10 col-md-12 col-sm-12 txtFadedAll text-center story_upper_box">
+            <div class="col-lg-2 col-md-12 col-sm-12"></div>
+            <div class="col-lg-8 col-md-12 col-sm-12 txtFadedAll text-center story_upper_box">
                 <div class="all-Img-Btn text-center">
                     <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
                     <div>
-                        <p class="m-0 story_relative_box story-span">The diamond proportion followed:</p>
+                        <p class="m-0 story_relative_box story-span mx-2">The diamond proportion followed:</p>
                     </div>
                     <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
                 </div>
                 <div class="story_box">
                     <p class="m-0">
-                        l Table: Around 57 to 60 cuts <span class="story_golden_line">|</span> l Crown angle: Around 13 to 15.5 degree <span class="story_golden_line">|</span> l Depth: 62.8 degree
+                        l Table: Around 57 to 60 cuts <span class="story_golden_line">|</span> l Crown angle: Around 13
+                        to 15.5 degree <span class="story_golden_line">|</span> l Depth: 62.8 degree
                     </p>
                 </div>
             </div>
-            <div class="col-lg-1 col-md-12 col-sm-12"></div>
+            <div class="col-lg-2 col-md-12 col-sm-12"></div>
         </div>
     </div>
 
@@ -226,9 +227,9 @@
                         <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
                     </div>
                 </div>
-                <p>Neither the sales amount nor the profit margin is our primary concern. Instead, we 
-                    focus on having satisfied customers. We strongly believe that a repeat client is 
-                    the cornerstone of any meaningful and successful business. We constantly strive 
+                <p>Neither the sales amount nor the profit margin is our primary concern. Instead, we
+                    focus on having satisfied customers. We strongly believe that a repeat client is
+                    the cornerstone of any meaningful and successful business. We constantly strive
                     to improve ourselves to serve the changing needs of our clients.</p>
             </div>
             <div class="col-lg-3 col-md-2 col-sm-12"></div>
@@ -243,9 +244,9 @@
                         <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
                     </div>
                 </div>
-                <p>It is been our primary endeavour since years that we cater to our customers by 
-                    providing only good valued products .To meet this requirement, we exercise the 
-                    most stringent quality control measures. Our diamonds achieve a clarity of VVS or 
+                <p>It is been our primary endeavour since years that we cater to our customers by
+                    providing only good valued products .To meet this requirement, we exercise the
+                    most stringent quality control measures. Our diamonds achieve a clarity of VVS or
                     Very fine VS1 and are graded EF (G+) which is clean and nearly colourless.</p>
             </div>
             <div class="col-lg-3 col-md-2 col-sm-12"></div>
@@ -260,9 +261,9 @@
                         <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
                     </div>
                 </div>
-                <p>We understand that good-valued products alone will not result in satisfied and 
-                    repeat customers. Hence, every member of our concern is always ready to serve a 
-                    customer to his total satisfaction with a view to establishing a long-term mutual 
+                <p>We understand that good-valued products alone will not result in satisfied and
+                    repeat customers. Hence, every member of our concern is always ready to serve a
+                    customer to his total satisfaction with a view to establishing a long-term mutual
                     beneficial relationship</p>
             </div>
             <div class="col-lg-3 col-md-2 col-sm-12"></div>
@@ -327,7 +328,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
