--- a/signup.html
+++ b/signup.html
@@ -140,12 +140,18 @@
     </div>
 
     <div class="container mt-5 mb-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">Sign up</p>
+        <div class="row">
+            <div class="col-lg-2 col-md-2 col-sm-12"></div>
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="allimgBtnbox">
+                        <p class="wishlistHead">Sign up</p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
             </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+            <div class="col-lg-2 col-md-2 col-sm-12"></div>
         </div>
     </div>
 
@@ -267,7 +273,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
