--- a/orderplaced.html
+++ b/orderplaced.html
@@ -136,23 +136,29 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5">
-        <div class="all-Img-Btn text-center">
-            <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
-            <div class="allimgBtnbox">
-                <p class="wishlistHead">
-                    We can't  <span class="sliderAlFnt">thank you</span> enough
-                </p>
-            </div>
-            <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+    <div class="container mt-5 mb-5 pt-4">
+        <div class="row">
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
+            <div class="col-lg-10 col-md-10 col-sm-12">
+                <div class="all-Img-Btn text-center">
+                    <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
+                    <div class="allimgBtnbox">
+                        <p class="wishlistHead">
+                            We can't  <span class="sliderAlFnt">thank you</span> enough
+                        </p>
+                    </div>
+                    <div class="allrightImg1"><img src="img/ring/line-2.png" class="img-fluid"></div>
+                </div>
+                <p class="pt-4 placeOrderpara text-center">Thank you for placing your order. It is our privilege to embellish you <br> and your loved ones 
+                    with our diamond jewellery. 
+                    We shall send you an email to inform <br> you about the status of your order once it is shipped</p>
+        
+                    <div class="placeOrderBtn text-center">
+                        <button class="btns">Discover more</button>
+                    </div>
+             </div>
+            <div class="col-lg-1 col-md-1 col-sm-12"></div>
         </div>
-        <p class="pt-4 placeOrderpara text-center">Thank you for placing your order. It is our privilege to embellish you <br> and your loved ones 
-            with our diamond jewellery. 
-            We shall send you an email to inform <br> you about the status of your order once it is shipped</p>
-
-            <div class="placeOrderBtn text-center">
-                <button class="btns">Discover more</button>
-            </div>
     </div>
 
     <div class="footer">
@@ -212,7 +218,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
