--- a/product.html
+++ b/product.html
@@ -147,14 +147,14 @@
             </div>
         </div>
     </div>
-    <section class="productDetails mt-5">
+    <section class="productDetails mt-5 pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="prodDetUImg">
                         <img src="img/ring/product-1.png" class="img-fluid" id="Product-Imge-Main">
                     </div>
-                    <div class="other-product-of-prodDet pt-2">
+                    <div class="other-product-of-prodDet">
                         <div class="prod-det-other" id="0" onclick="ProdDetailImgChange(this.id)">
                             <img src="img/ring/product-1.png" class="img-fluid">
                         </div>
@@ -162,15 +162,6 @@
                             <img src="img/ring/product-2.png" class="img-fluid">
                         </div>
                         <div class="prod-det-other" id="2" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-3.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="3" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-4.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="4" onclick="ProdDetailImgChange(this.id)">
-                            <img src="img/ring/product-2.png" class="img-fluid">
-                        </div>
-                        <div class="prod-det-other" id="5" onclick="ProdDetailImgChange(this.id)">
                             <img src="img/ring/product-3.png" class="img-fluid">
                         </div>
                     </div>
@@ -220,9 +211,12 @@
                             <div class="qtyTxt">
                                 Qty: 
                             </div>
-                            <div class="QtyChange-box">
+                            <div class="QtyChange-box prod_det_qtyox">
                                 <span id="ProdDetQtyNum">1</span>
-                                <span class="QtyLogoProdDet"><i class="fas fa-sort-down"></i></span>
+                                <div class="prodIWhole_div">
+                                    <div class="Prod_detIDiv"><i class="fas fa-sort-up QtyLogoProdDetPlus"></i></div>
+                                    <div class="Prod_detIDiv"><i class="fas fa-sort-down QtyLogoProdDet"></i></div>
+                                </div>
                             </div>
                         </div>
                         <div class="prodDetaiButton mt-4">
@@ -243,7 +237,7 @@
     </section>
 
     <section class="producySlider mt-5 mb-5">
-        <div class="sliderHead text-center mb-5 mt-5">
+        <div class="sliderHead text-center mb-5 mt-5 pt-5">
             <h2 class="allHeading">
                 <span class="sliderAlFnt">Trending</span>
                 Ring
@@ -283,8 +277,8 @@
                 </div>
             </div>
         </div>
-        <div class="custom-btns-prev-slider sliderLRArr"><img src="img/left-arrow.png" alt=""></div>
-        <div class="custom-btns-next-slider sliderLRArr"><img src="img/right-arrow.png" alt=""></div>
+        <div class="custom-btns-prev-slider sliderLRArr sliderHome"><img src="img/left-arrow.png" alt=""></div>
+        <div class="custom-btns-next-slider sliderLRArr sliderHome"><img src="img/right-arrow.png" alt=""></div>
     </section>
 
     <div class="footer">
@@ -344,7 +338,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
@@ -406,7 +400,7 @@
         });
 
         let ProdImgId = document.getElementById('Product-Imge-Main');
-        let imgArr = ['img/ring/product-1.png', 'img/ring/product-2.png', 'img/ring/product-3.png', 'img/ring/product-4.png', 'img/ring/product-2.png', 'img/ring/product-3.png'];
+        let imgArr = ['img/ring/product-1.png', 'img/ring/product-2.png', 'img/ring/product-3.png'];
         function ProdDetailImgChange(id){
             imgArr.forEach((e,i)=>{
                 if(id == i){
@@ -428,20 +422,32 @@
         });
 
         let ProdDetQtyNum = document.getElementById('ProdDetQtyNum'),
-        QtyLogoProdDet= document.querySelector('.QtyLogoProdDet');
+        QtyLogoProdDet= document.querySelector('.QtyLogoProdDet'),
+        QtyLogoProdDetPlus = document.querySelector('.QtyLogoProdDetPlus');
         let value = parseFloat(ProdDetQtyNum.innerText);
-        let count = 0;
+        let count = value;
         QtyLogoProdDet.addEventListener('click', ()=>{
-            count++
+            console.log('hii9');
+            
+            count--
+            if(count <= 0){
+                count = 0
+            }
             ProdDetQtyNum.innerText = count;
         });
+        QtyLogoProdDetPlus.addEventListener('click', ()=>{
+            console.log('hi');
+            
+            count++
+            ProdDetQtyNum.innerText = count
+        })
     </script>
 
     <script>
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: true,
-            margin: 10,
+            margin: 20,
             nav: false,
             dots: false,
             autoplay: true,
