--- a/ring.html
+++ b/ring.html
@@ -327,9 +327,9 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="col-lg-4 col-md-12 col-sm-12">
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-4.png" class="img-fluid">
                                     </div>
@@ -341,11 +341,11 @@
                                             <p class="ringSmml-txt p-0 m-0">Rs. 1,00,000</p>
                                         </div>
                                         <div class="ringWCIcon">
-                                            <button class="btns">Request for price</button>
+                                            <button class="btns ring_req_btn">Request for price</button>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-5.png" class="img-fluid">
                                     </div>
@@ -364,7 +364,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-12 perProduct-Ring">
+                        <div class="col-lg-8 col-md-12 col-sm-12 perProduct-Ring">
                             <div class="long-img-box">
                                 <img src="img/ring/product-9.png" class="img-fluid">
                             </div>
@@ -487,7 +487,7 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="row">
-                        <div class="col-lg-8 col-md-8 col-sm-12">
+                        <div class="col-lg-8 col-md-12 col-sm-12">
                             <div class="long-img-box">
                                 <img src="img/ring/product-10.png" class="img-fluid">
                             </div>
@@ -504,9 +504,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-12">
+                        <div class="col-lg-4 col-md-12 col-sm-12">
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-4.png" class="img-fluid">
                                     </div>
@@ -523,7 +523,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-12 col-md-12 col-sm-6 col-6 perProduct-Ring">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-6 perProduct-Ring">
                                     <div class="ring-per-imags">
                                         <img src="img/ring/product-5.png" class="img-fluid">
                                     </div>
@@ -650,7 +650,7 @@
         </div>
     </section>
 
-    <div class="container mt-4 mb-5">
+    <div class="container py-4 mt-4 mb-5">
         <div class="all-Img-Btn text-center">
             <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
             <div class="allimgBtnbox">
@@ -693,9 +693,9 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="custom-btns-prev-slider sliderLRArr"><img src="img/left-arrow.png" alt=""></div>
-        <div class="custom-btns-next-slider sliderLRArr"><img src="img/right-arrow.png" alt=""></div>
+       </div>
+        <div class="custom-btns-prev-slider sliderLRArr sliderNotHome"><img src="img/left-arrow.png" alt=""></div>
+        <div class="custom-btns-next-slider sliderLRArr sliderNotHome"><img src="img/right-arrow.png" alt=""></div>
     </section>
 
     <div class="footer">
@@ -755,7 +755,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
@@ -821,7 +821,7 @@
         var owl = $('.owl-carousel');
         owl.owlCarousel({
             loop: true,
-            margin: 10,
+            margin: 18,
             nav: false,
             dots: false,
             autoplay: true,
