--- a/wishlist.html
+++ b/wishlist.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chirag - Wishlist</title>
 
-     <!-- fontawsome  -->
-     <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
+    <!-- fontawsome  -->
+    <script src="https://kit.fontawesome.com/a16f8ee6e2.js" crossorigin="anonymous"></script>
 
     <!-- bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,6 +20,7 @@
     <!-- custom  -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="wholeHeader headerNotHomeWhole" id="wholeHeader">
         <div class="upperHeader">
@@ -138,10 +140,10 @@
     </div>
 
 
-    <div class="container mt-4 mb-5">
+    <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-lg-1 col-md-1 col-sm-12"></div>
-            <div class="col-lg-9 col-md-8 col-sm-12">
+            <div class="col-lg-10 col-md-10 col-sm-12">
                 <div class="all-Img-Btn text-center">
                     <div class="allLeftImg1"><img src="img/ring/line.png" class="img-fluid"></div>
                     <div class="allimgBtnbox">
@@ -154,8 +156,18 @@
         </div>
     </div>
 
-    <div class="productwishlist mb-5">
+    <!-- backend part  -->
+    <!-- <div class="container cartWishEmpty text-center mb-5">
+        <div class="mb-4">
+            <p class="m-0 txtFadedAll">Make a wish.</p>
+            <p class="m-0 txtFadedAll">And see it come true in our product gallery</p>
+        </div>
+        <button class="btns">Discover now</button>
+    </div> -->
+
+    <div class="productwishlist mb-5 pb-5">
         <div class="container">
+            <p class="txtFadedAll wishlistProdTxt">Product</p>
             <div class="wishlistPerPod mb-3">
                 <div class="wishProdDelete">
                     <span class="wishProdCross">X</span>
@@ -163,12 +175,12 @@
                 <div class="row">
                     <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
                         <div class="row">
-                            <div class="col-lg-3 col-md-4 col-sm-12">
+                            <div class="col-lg-2 col-md-4 col-sm-12">
                                 <div class="wishProd-Img">
                                     <img src="img/ring/product-1.png" class="img-fluid">
                                 </div>
                             </div>
-                            <div class="col-lg-9 col-md-8 col-sm-12 wishProdMargin">
+                            <div class="col-lg-10 col-md-8 col-sm-12 wishProdMargin">
                                 <div class="wishProd-Details">
                                     <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
                                     <p class="wishProd-2de">size: 48 </p>
@@ -181,6 +193,7 @@
                     </div>
                 </div>
             </div>
+            <hr class="mt-5 mb-5 wishLishHr">
             <div class="wishlistPerPod mb-3">
                 <div class="wishProdDelete">
                     <span class="wishProdCross">X</span>
@@ -188,12 +201,12 @@
                 <div class="row">
                     <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
                         <div class="row">
-                            <div class="col-lg-3 col-md-4 col-sm-12">
+                            <div class="col-lg-2 col-md-4 col-sm-12">
                                 <div class="wishProd-Img">
                                     <img src="img/ring/product-1.png" class="img-fluid">
                                 </div>
                             </div>
-                            <div class="col-lg-9 col-md-8 col-sm-12 wishProdMargin">
+                            <div class="col-lg-10 col-md-8 col-sm-12 wishProdMargin">
                                 <div class="wishProd-Details">
                                     <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
                                     <p class="wishProd-2de">size: 48 </p>
@@ -206,6 +219,7 @@
                     </div>
                 </div>
             </div>
+            <hr class="mt-5 mb-5 wishLishHr">
             <div class="wishlistPerPod">
                 <div class="wishProdDelete">
                     <span class="wishProdCross">X</span>
@@ -213,12 +227,12 @@
                 <div class="row">
                     <div class="col-lg-10 col-md-9 col-sm-12 wishProd-Border">
                         <div class="row">
-                            <div class="col-lg-3 col-md-4 col-sm-12">
+                            <div class="col-lg-2 col-md-4 col-sm-12">
                                 <div class="wishProd-Img">
                                     <img src="img/ring/product-1.png" class="img-fluid">
                                 </div>
                             </div>
-                            <div class="col-lg-9 col-md-8 col-sm-12 wishProdMargin">
+                            <div class="col-lg-10 col-md-8 col-sm-12 wishProdMargin">
                                 <div class="wishProd-Details">
                                     <p class="wishProd-1de m-0">Diamond ring (R-445)</p>
                                     <p class="wishProd-2de">size: 48 </p>
@@ -291,7 +305,7 @@
                         </div>
                         <div class="inputBtn">
                             <div>
-                                <input type="text" placeholder="Enter your email please" class="newLtrEmail">
+                                <input type="text" class="newLtrEmail">
                             </div>
                             <div>
                                 <button class="btns newltrBtn">Subscribe</button>
@@ -334,28 +348,29 @@
     <script src="logic.js"></script>
 
     <script>
-         window.addEventListener('scroll', () => {
+        window.addEventListener('scroll', () => {
             let wholeHeader = document.querySelector('.wholeHeader');
             let headerImgJs = document.getElementById('headerImgJs');
             let headerImg2Js = document.getElementById('headerImg2Js');
             let position = window.scrollY > 0;
             wholeHeader.classList.toggle('custHeadClass', position);
-           
+
             !position ? headerImgJs.style.display = 'block' : headerImgJs.style.display = 'none';
             position ? headerImg2Js.style.display = 'block' : headerImg2Js.style.display = 'none';
 
         });
 
-      let wishlistPerPod = document.querySelectorAll('.wishlistPerPod');
-      wishlistPerPod.forEach((e,i)=>{
-          let deleteBtn = e.querySelector('.wishProdDelete');
-          deleteBtn.addEventListener('click', ()=>{
-            e.remove();
-            
-          });
-      })
+        let wishlistPerPod = document.querySelectorAll('.wishlistPerPod');
+        wishlistPerPod.forEach((e, i) => {
+            let deleteBtn = e.querySelector('.wishProdDelete');
+            deleteBtn.addEventListener('click', () => {
+                e.remove();
+
+            });
+        })
     </script>
 
 
 </body>
+
 </html>
