--- a/arrival.html
+++ b/arrival.html
@@ -149,7 +149,7 @@
     </div>
 
     <div class="ring-upper-txt text-center mt-5">
-        <h2 class="allHeading">
+        <h2 class="allHeading txtFadedAll">
             New
             <span class="sliderAlFnt">Arrivals</span>
         </h2>
@@ -335,9 +335,9 @@
     </section>
 
 
-    <section class="producySlider mt-5 mb-5 pt-5">
+    <section class="producySlider mt-5 mb-5 pt-3">
         <div class="sliderHead text-center mb-5 mt-5">
-            <h2 class="allHeading">
+            <h2 class="allHeading txtFadedAll">
                 Explore
                 <span class="sliderAlFnt">Categories</span>
             </h2>
@@ -368,7 +368,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+       </div>
         <div class="custom-btns-prev-slider sliderLRArr sliderNotHome"><img src="img/left-arrow.png" alt=""></div>
         <div class="custom-btns-next-slider sliderLRArr sliderNotHome"><img src="img/right-arrow.png" alt=""></div>
     </section>
