--- a/product.html
+++ b/product.html
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 prodDetleftBox">
-                    <div class="headerIcon mt-4">
+                    <div class="headerIconProd d-flex mt-4">
                         <div class="perIcon">
                             <a href="./wishlist.html">
                                 <img src="img/fav.png" class="perHdImg">
@@ -277,8 +277,8 @@
                 </div>
             </div>
         </div>
-        <div class="custom-btns-prev-slider sliderLRArr sliderHome"><img src="img/left-arrow.png" alt=""></div>
-        <div class="custom-btns-next-slider sliderLRArr sliderHome"><img src="img/right-arrow.png" alt=""></div>
+        <div class="custom-btns-prev-slider sliderLRArr sliderHomeProd"><img src="img/left-arrow.png" alt=""></div>
+        <div class="custom-btns-next-slider sliderLRArr sliderHomeProd"><img src="img/right-arrow.png" alt=""></div>
     </section>
 
     <div class="footer">
