--- a/ring.html
+++ b/ring.html
@@ -660,9 +660,9 @@
         </div>
     </div>
 
-    <section class="producySlider mt-5 mb-5">
+    <section class="producySlider mt-5 mb-5 pt-3">
         <div class="sliderHead text-center mb-5 mt-5">
-            <h2 class="allHeading">
+            <h2 class="allHeading txtFadedAll">
                 Other
                 <span class="sliderAlFnt">Categories</span>
             </h2>
